force-app/main/default/objects/ReleaseVersion__c/ReleaseVersion__c.object-meta.xml
<CustomObject>
    <description>Holds minimal information on relased packages: Major and Minor number, package Id</description>
    <label>Release Version</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Release Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>