force-app/main/default/objects/ReleaseVersion__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date of the Release</description>
    <inlineHelpText>Date of the Release</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>