force-app/main/default/objects/ReleaseVersion__c/fields/isBetaPackage__c.field-meta.xml
<CustomField>
    <fullName>isBetaPackage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates a Beta Package. Can only be installed in Sandboxes</description>
    <inlineHelpText>Can only be installed in Sandboxes or Developer Orgs. Cannot be upgraded.</inlineHelpText>
    <label>Beta Package</label>
    <type>Checkbox</type>
</CustomField>