force-app/main/default/objects/ReleaseVersion__c/fields/minorVersionNumber__c.field-meta.xml
<CustomField>
    <fullName>minorVersionNumber__c</fullName>
    <description>Integer indicating major Version Number</description>
    <inlineHelpText>Major and Minor Version determine a package's identity next to its packageId</inlineHelpText>
    <label>Major Version Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>