force-app/main/default/objects/ReleaseVersion__c/fields/packageId__c.field-meta.xml
<CustomField>
    <fullName>packageId__c</fullName>
    <description>PackageId; starts with 04t</description>
    <externalId>true</externalId>
    <inlineHelpText>PackageId can be used to generate Install URLs</inlineHelpText>
    <label>Package Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>