force-app/main/default/objects/ReleaseVersion__c/fields/packageName__c.field-meta.xml
<CustomField>
    <fullName>packageName__c</fullName>
    <description>The name of the released package</description>
    <inlineHelpText>The name of the released package</inlineHelpText>
    <label>Package Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>