force-app/main/default/objects/ReleaseVersion__c/fields/ProductionInstallURL__c.field-meta.xml
<CustomField>
    <fullName>ProductionInstallURL__c</fullName>
    <description>Creates an install link for production Instances</description>
    <formula>HYPERLINK('https://login.salesforce.com/packaging/installPackage.apexp?p0='+packageId__c,'https://login.salesforce.com/packaging/installPackage.apexp?p0='+packageId__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use this link for your production org</inlineHelpText>
    <label>Production Installation</label>
    <type>Text</type>
</CustomField>