force-app/main/default/objects/ReleaseVersion__c/fields/SandoxInstallURL__c.field-meta.xml
<CustomField>
    <fullName>SandoxInstallURL__c</fullName>
    <description>Sandbox Installation Link generated from PackageId</description>
    <formula>HYPERLINK('https://test.salesforce.com/packaging/installPackage.apexp?p0='+packageId__c,'https://test.salesforce.com/packaging/installPackage.apexp?p0='+packageId__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sandbox Installation Link</inlineHelpText>
    <label>Sandbox Installation</label>
    <type>Text</type>
</CustomField>